# zcash-devtool

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh  feature_requests.md  feature_requests_round2.md  justfile  rust-toolchain.toml
.github/workflows/: cache-bump.yml  ci.yml  speed.yml
doc/: frost-walkthrough.md  walkthrough.md
src/: commands.rs  config.rs  data.rs  error.rs  frost_config.rs  frost_serde.rs  helpers.rs  main.rs  remote.rs  socks.rs  tui.rs  ui.rs
src/commands/: balance.rs  create_multisig_address.rs  enhance.rs  import_ufvk.rs  init.rs  init_fvk.rs  inspect.rs  keystone.rs  list_accounts.rs  list_addresses.rs  list_tx.rs  list_unspent.rs  multisig_address.rs  pczt.rs  propose.rs  reset.rs  send.rs  shield.rs  sync.rs  upgrade.rs  wallet.rs  zip48.rs
src/commands/inspect/: address.rs  block.rs  context.rs  foreign_address.rs  keys.rs  lookup.rs  script.rs  transaction.rs
src/commands/inspect/keys/: view.rs
src/commands/pczt/: combine.rs  create.rs  create_manual.rs  create_max.rs  decrypt.rs  extract.rs  frost_participate.rs  frost_sign.rs  inspect.rs  pay_manual.rs  prove.rs  qr.rs  redact.rs  send.rs  send_without_storing.rs  shield.rs  sign.rs  update_with_derivation.rs  update_with_signature.rs
src/commands/pczt/qr/: tui.rs
src/commands/sync/: defrag.rs
src/commands/wallet/: balance.rs  delete_account.rs  derive_path.rs  display_mnemonic.rs  enhance.rs  frost_dkg.rs  gen_account.rs  gen_addr.rs  get_info.rs  import_ufvk.rs  init.rs  init_fvk.rs  init_ledger.rs  list_accounts.rs  list_addresses.rs  list_tx.rs  list_unspent.rs  pay.rs  propose.rs  reset.rs  restore_mnemonic.rs  send.rs  shield.rs  sync.rs  tree.rs  upgrade.rs
src/commands/wallet/sync/: defrag.rs
src/commands/wallet/tree/: explore.rs  fix.rs
src/commands/zip48/: derive_account.rs  derive_address.rs  init.rs  verify_account.rs
src/helpers/: pczt.rs
src/helpers/pczt/: create_manual.rs
src/ui/: proposal.rs
utils/: build.sh  compat.sh  create_wallet.sh  entrypoint.sh  load_image.sh
