[package]
name = "zcash-devtool"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
bip32 = "0.5"
futures-util = "0.3"
hex = "0.4"
jubjub = "0.10"
prost = "0.13"
rayon = "1.7"
rusqlite = { version = "0.32", features = ["time"] }
schemerz = "0.2"
secrecy = "0.8"
serde = "1.0"
time = "0.3"
tokio = { version = "1.21.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tonic = { version = "0.12", features = ["gzip", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"

orchard = { version = "0.10", default-features = false }
pczt = "0.1"
sapling = { package = "sapling-crypto", version = "0.4", features = ["test-dependencies", "unstable-ledger"] }
transparent = { package = "zcash_transparent", version = "0.1", features = ["test-dependencies"] }
zcash_address = "0.6"
zcash_client_backend = { version = "0.16", features = ["lightwalletd-tonic-tls-webpki-roots", "orchard", "pczt", "tor"] }
zcash_client_sqlite = { version = "0.14", features = ["unstable", "orchard", "serde"] }
zcash_keys = { version = "0.6", features = ["unstable", "orchard", "test-dependencies"] }
zcash_primitives = "0.21"
zcash_proofs = "0.21"
zcash_protocol = { version = "0.4", features = ["local-consensus"] }
zip32 = "0.1"
zip321 = "0.2"

# CLI
clap = { version = "4.5", features = ["derive", "string", "unstable-styles"] }

# Seed encryption
age = { version = "0.11", features = ["armor", "plugin"] }
chrono = "0.4"

# Currency conversion
iso_currency = { version = "0.5", features = ["with-serde"] }
rust_decimal = "1"

# Inspect
bech32 = "0.11"
bellman = "0.14"
blake2b_simd = "1"
ed25519-zebra = "4"
equihash = "0.2"
group = "0.13"
lazy_static = "1"
secp256k1 = "0.27"
serde_json = "1"
sha2 = "0.10"
uint = "0.9"
zcash_encoding = "0.2"
zcash_note_encryption = "0.4"

# PCZT QR codes
image = { version = "0.25", optional = true }
minicbor = { version = "0.19", optional = true }
nokhwa = { version = "0.10", optional = true, features = ["input-native"] }
qrcode = { version = "0.14", optional = true, default-features = false }
rqrr = { version = "0.8", optional = true }
ur = { version = "0.4", optional = true }

# TUI
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }
ratatui = { version = "0.29", optional = true }
roaring = { version = "0.10", optional = true }
tokio-util = { version = "0.7", optional = true }
tui-logger = { version = "0.14", optional = true, features = ["tracing-support"] }

# Ledger Support 
ledger-zcash = { git = "https://github.com/zecdev/ledger-zcash-rs.git", rev = "d12c85b7b2d12bd860cee55fc79cb46330259c56", optional = true }
zx-bip44 = { version = "0.1.0", optional = true }
redjubjub = { version = "0.7", optional = true }
ledger-transport = { version = "0.11", optional = true }
ledger-zondax-generic = { version = "0.11", optional = true }
ledger-transport-hid = { version = "0.11", optional = true }

# Manage HidApi instance. 
bytemuck = { version = "1.20.0", optional = true }


[features]
default = ["transparent-inputs"]
pczt-qr = ["dep:image", "dep:minicbor", "dep:nokhwa", "dep:qrcode", "dep:rqrr", "dep:ur"]
transparent-inputs = [
    "zcash_client_sqlite/transparent-inputs",
]
tui = [
    "dep:crossterm",
    "dep:ratatui",
    "dep:roaring",
    "dep:tokio-util",
    "dep:tui-logger",
]
ledger-support = [
    "dep:ledger-zcash",
    "dep:zx-bip44",
    "dep:ledger-transport",
    "dep:ledger-zondax-generic",
    "dep:bytemuck",
]

[patch.crates-io]
sapling-crypto = { git = "https://github.com/pacu/sapling-crypto.git", rev = "09320f2fb1d058185d5a739325e4b893b0012955" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "1cf76ae8c02ec0b2627e20b60df526641d40c942" }

equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "4fa6d3b549f8803016a309281404eab095d04de8" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }

transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }
zip321 = { git = "https://github.com/zcash/librustzcash.git", rev = "9c6d1b958bd015f3fc3f8d5e5815b2bfc54e484b" }